--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
     "body-parser": "~1.16.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "express-asyncify": "^1.0.0",
     "express-session": "^1.15.1",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "jsonwebtoken": "^7.3.0",
     "jwt-simple": "^0.5.1",
     "mongodb": "^2.2.24",
@@ -23,7 +27,10 @@
     "serve-favicon": "~2.3.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-regenerator": "^6.22.0",
+    "file-exists": "^3.0.2",
     "gulp": "^3.9.1",
-    "gulp-live-server": "0.0.30"
+    "gulp-live-server": "0.0.30",
+    "gulp-load-plugins": "^1.5.0"
   }
 }
