--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodejs",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
@@ -15,8 +15,6 @@
     "express": "~4.14.1",
     "express-asyncify": "^1.0.0",
     "express-session": "^1.15.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
     "jsonwebtoken": "^7.3.0",
     "jwt-simple": "^0.5.1",
     "mongodb": "^2.2.24",
@@ -30,7 +28,10 @@
     "babel-plugin-transform-regenerator": "^6.22.0",
     "file-exists": "^3.0.2",
     "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
     "gulp-live-server": "0.0.30",
-    "gulp-load-plugins": "^1.5.0"
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-sync": "^0.1.4",
+    "gulp-babel": "^6.1.2"
   }
 }
